--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-- send PM to me when the bot is started (to catch restarts due to panics)
+X send PM to me when the bot is started (to catch restarts due to panics)
 - json configuration file
 - add /help command
