--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 X send PM to me when the bot is started (to catch restarts due to panics)
 - json configuration file
-- add /help command
+X add /help command
+X improve status command: list sensors and "last seen"
